<resources>
	<string name="app_name">Quality Care for Children</string>
	<string name="hello_world">Hello world!</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_about">About</string>
	<string name="title_activity_main">Quality Care for Children</string>
	<string name="login">Login</string>
	<string name="username">Username</string>
	<string name="create_account">Create Account</string>
	<string name="password">Password</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="first_name">First Name</string>
	<string name="middle_name">Middle Name</string>
	<string name="last_name">Last Name</string>
	<string name="tab_p_info">Personal</string>
	<string name="tab_login_info">Login</string>
	<string name="tab_children">Children</string>
	<string name="email_prompt">Email Address</string>
	<string name="phone_number">Phone Number</string>
	<string name="zip_code">Zip Code</string>
	<string name="find_child_care">Find Child Care</string>
	<string name="talk_to_expert">Talk To An Expert</string>
	<string name="checklist">Checklist</string>
	<string name="paying_for_care">Paying for Care</string>
	<string name="state_monitoring">State Monitoring</string>
	<string name="talk_expert">Talk to an Expert!</string>
	<string name="expert_hours">Our experts at 877-ALL-GA-KIDS can give you a list of referrals,
personalize your search and answer any questions you have about child
care in Georgia.</string>
	<string name="expert_number">Call Now!</string>
	<string-array name="num_of_children">
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
		<item>6</item>
		<item>7</item>
	</string-array>
	<string-array name="age_list">
		<item>Expecting</item>
		<item>0 - 6 Mo</item>
		<item>6 - 12 Mo</item>
		<item>1 - 2 Yr</item>
		<item>2 - 3 Yr</item>
		<item>3 - 4 Yr</item>
		<item>4 - 5 Yr</item>
		<item>5 - 12 Yr</item>
		<item>12+ Yr</item>
	</string-array>
	
    <string name="learn_about_caps">Learn More About CAPS</string>
    <string name="learn_about_tanf">Learn More About TANF</string>
    <string name="open_website">Open State Application</string>
    <string name="menu_profile">View Profile</string>
    <string name="state_licensing">Bright from the Start: Georgia Department of Early Care and Learning
administers the nationally recognized Georgia’s Pre-K Program, licenses
child care centers and home-based child care, administers federal nutrition
programs, and manages voluntary quality enhancement programs.</string>
	<string name="complaints">State Complaints and Inquiries</string>
	<string name="complaints_text">To file a complaint or make an inquiry about a program call Bright from the
Start at 404-463-0703.</string>
	<string name="call_now">Call Now!</string>
	<string name="report_abuse">Report Child Abuse</string>
	<string name="report_abuse_text">To report abuse call Bright from the Start Georgia at 404-463-0703.</string>
	<string name="view_inspection">View State Inspections</string>
	<string name="view_inspection_text">To view the inspection report of a program, go to Bright from the Start
website: www.decal.ga.gov</string>
	<string name="other_inquiries">Other Inquiries</string>
	<string name="other_inquiries_text">For other inquiries about child care or to a to an expert, call us at 877-255-
4254.</string>
	<string name="license">State Licensing</string>
	<string name="business_name">Business Name</string>
	<string name="type_of_care">Type of Care</string>
	<string name="street_address">Street Address</string>
	<string name="contact">Contact Information</string>
	<string name="rating">My Rating</string>
	<string name="provider_chk_1">Provider talks to children at eye-level.</string>
	<string name="provider_chk_2">Provider responds to a hurt or unhappy child.</string>
	<string name="provider_chk_3">Provider has received at least a minimum of 10 hours of training annually (suggested minimum: 20 hours).</string>
	<string name="provider_chk_4">Provider has a high school diploma or CDA (Child Development Associate) or higher degree.</string>
	<string name="provider_chk_5">Provider has relevant early childhood experience.</string> 
	<string name="provider_chk_6">Staff turnover is low. The same provider remains with the child for most of the year.</string>
</resources>
