<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/provider_checkbox_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provider_chk_1" />

    <CheckBox
        android:id="@+id/provider_checkbox_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provider_chk_2" />

    <CheckBox
        android:id="@+id/provider_checkbox_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provider_chk_3" />

    <CheckBox
        android:id="@+id/provider_checkbox_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provider_chk_4" />

    <CheckBox
        android:id="@+id/provider_checkbox_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provider_chk_5" />

    <CheckBox
        android:id="@+id/provider_checkbox_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provider_chk_6" />
</LinearLayout>