<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

    <Button
        android:id="@+id/btnFind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_child_care" />

    <Button
        android:id="@+id/btnTalkToExpert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/talk_to_expert" />

    <Button
        android:id="@+id/btnChecklist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checklist" />

    <Button
        android:id="@+id/btnPayingForCare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paying_for_care" />

    <Button
        android:id="@+id/btnStateMonitoring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/state_monitoring" />

</LinearLayout>
