<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/watermarkviolet">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:text="@string/license"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/state_licensing" />

<!--     <Button -->
<!--         android:id="@+id/btnComplaints" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:text="@string/complaints" /> -->
    
	     <Button
	        android:id="@+id/btnComplaints"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="30dp"
	        android:layout_marginLeft="25dp"
	        android:layout_marginRight="25dp"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/violetbutton"
	        android:text="@string/complaints"
	        style="@style/ButtonTextState"/>

<!--     <Button -->
<!--         android:id="@+id/btnAbuse" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:text="@string/report_abuse" /> -->
		<Button
	        android:id="@+id/btnAbuse"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="15dp"
	        android:layout_marginLeft="25dp"
	        android:layout_marginRight="25dp"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/violetbutton"
	        android:text="@string/report_abuse"
	        style="@style/ButtonTextState"/>

<!--     <Button -->
<!--         android:id="@+id/btnViewInspection" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:text="@string/view_inspection" /> -->
		<Button
	        android:id="@+id/btnViewInspection"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="15dp"
	        android:layout_marginLeft="25dp"
	        android:layout_marginRight="25dp"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/violetbutton"
	        android:text="@string/view_inspection"
	        style="@style/ButtonTextState"/>

<!--     <Button -->
<!--         android:id="@+id/btnOtherInquiries" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:text="@string/other_inquiries" /> -->

		<Button
	        android:id="@+id/btnOtherInquiries"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="15dp"
	        android:layout_marginLeft="25dp"
	        android:layout_marginRight="25dp"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/violetbutton"
	        android:text="@string/other_inquiries"
	        style="@style/ButtonTextState"/>

</LinearLayout>