<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/vectorlogo" />

    <Button
        android:id="@+id/btnCreateAcct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight=".9"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"
        android:text="@string/create_account" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnCreateAcct"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:text="@string/login" />

    <EditText
        android:id="@+id/txtUsernameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/banner"
<<<<<<< HEAD
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
=======
        android:layout_marginTop="170dp"
>>>>>>> UI Revamp in Progress
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textNoSuggestions|textPersonName" >

        <requestFocus />
     </EditText>

    <EditText
        android:id="@+id/txtPasswordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtUsernameInput"
        android:layout_below="@+id/txtUsernameInput"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPassword" 
        android:hint="@string/password">
       

    </EditText>


</RelativeLayout>