<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/watermarkyellow">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/business_name" />

    <TextView
        android:id="@+id/txt_business_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/type_of_care" />

    <TextView
        android:id="@+id/txt_type_of_care"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/street_address" />

    <TextView
        android:id="@+id/txt_street_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/state_zip_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp">

        <TextView
            android:id="@+id/txt_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txt_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txt_zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/contact" />

    <TextView
        android:id="@+id/txt_contact_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_marginLeft="20dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

<!--     <Button -->
<!--         android:id="@+id/btnCallContact" -->
<!--         style="?android:attr/buttonStyleSmall" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:text="Button" /> -->

		 <Button
	        android:id="@+id/btnCallContact"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="15dp"
	        android:layout_marginLeft="25dp"
	        android:layout_marginRight="25dp"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/yellowbutton"
	        android:text="Button"
	        style="@style/ButtonTextState"/>
		 

<!--     <Button -->
<!--         android:id="@+id/btnEmailContact" -->
<!--         style="?android:attr/buttonStyleSmall" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:text="Button" /> -->
		 <Button
	        android:id="@+id/btnEmailContact"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="6dp"
	        android:layout_marginLeft="25dp"
	        android:layout_marginRight="25dp"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/yellowbutton"
	        android:text="Button"
	        style="@style/ButtonTextState"/>
		 

<!--     <Button -->
<!--         android:id="@+id/btnWebsite" -->
<!--         style="?android:attr/buttonStyleSmall" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:text="Button" /> -->

		 <Button
	        android:id="@+id/btnWebsite"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="6dp"
	        android:layout_marginLeft="25dp"
	        android:layout_marginRight="25dp"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/yellowbutton"
	        android:text="Button"
	        style="@style/ButtonTextState"/>
		 

    <LinearLayout
        android:id="@+id/ratingLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:layout_marginLeft="20dp"
            android:text="@string/rating"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RatingBar
            android:id="@+id/rtngCareRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:color="@color/starYellow"
            android:numStars="3"
            android:stepSize="1" />
    </LinearLayout>

</LinearLayout>